--- a/site/css/screen.css
+++ b/site/css/screen.css
@@ -2,6 +2,31 @@ body {
   background-color: #eee;
 }
 
+.bookContainer {
+  outline: 1px solid #aaa;
+  width: 350px;
+  height: 130px;
+  background-color: #fff;
+  float: left;
+  margin: 5px;
+}
+
+.bookContainer img {
+  float: left;
+  margin: 10px;
+}
+
+.bookContainer ul {
+  list-style-type: none;
+  margin-bottom: 0;
+  line-height: 1.2;
+}
+
+.bookContainer button {
+  float: right;
+  margin: 10px;
+}
+
 #addBook label {
   width: 100px;
   margin-right: 10px;
